# IK

./: CMakeLists.txt  README.md  main.cpp
IK/: CMakeLists.txt  IK.cpp  IK.h
Link/: CMakeLists.txt  Link.cpp  Link.h
Math/: CMakeLists.txt  Math.cpp  Math.h
Vector/: CMakeLists.txt  Vector.cpp  Vector.h
scripts/: run.sh  test.sh
test/: Test.cpp  Test_IK.cpp  Test_Math.cpp  Test_Vector.cpp
